SED-3352 AP executions filter by plan categories